# compose-idents

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.md.tpl  Taskfile.yml
.github/workflows/: build.yml
adr/: 0000-type-system.md  0001-code-repetition.md  notes.md
adr/kb/: 0000-rust-syntax-structure.md  compiler-pipeline.mmd  template.md
examples/: usage.rs
snippets/: alias_reuse.rs  base.md.tpl  basic.rs  casing.rs  code_repetition.rs  compose_item.rs  concat.rs  docs.md  docs.md.tpl  functions.rs  hash.rs  hash_expansion.rs  heading.tpl  normalize.rs  normalize2.rs  reference.md.tpl  reference_h2.md  reference_h2_compose_idents.md  string_formatting.rs  usage.rs
src/: alias_substitution_visitor.rs  ast.rs  core.rs  deprecation.rs  error.rs  eval.rs  funcs.rs  interpreter.rs  lib.rs  parse.rs  product.rs  resolve.rs  unique_id.rs  utils.rs
src/ast/: alias.rs  alias_spec.rs  alias_spec_item.rs  alias_value.rs  arg.rs  args.rs  call.rs  compose_idents_args.rs  compose_item_spec.rs  core.rs  expanded.rs  expr.rs  for_loop.rs  func.rs  loop_alias.rs  loop_source_value_list.rs  loop_spec.rs  loop_spec_item.rs  mod.rs  raw_ast.rs  tuple.rs  value.rs
src/core/: mod.rs  type_.rs
src/core/environment/: core.rs  init_funcs.rs  mod.rs
src/eval/: alias_spec.rs  alias_spec_item.rs  alias_value.rs  arg.rs  call.rs  compose_idents_args.rs  core.rs  expr.rs  func.rs  mod.rs  value.rs
src/expand/: core.rs  mod.rs  raw_ast.rs
src/interpreter/: core.rs  mod.rs  test.rs
src/interpreter/tests/: aliases.rs  calls.rs  loops.rs  mod.rs  non_terminals.rs  string_formatting.rs  types.rs
src/parse/: alias.rs  alias_spec.rs  alias_spec_item.rs  alias_value.rs  arg.rs  call.rs  compose_idents_args.rs  compose_item_spec.rs  core.rs  expr.rs  func.rs  loop_alias.rs  loop_source_value_list.rs  loop_spec.rs  loop_spec_item.rs  mod.rs  raw_ast.rs  tuple.rs  type_.rs  value.rs
src/resolve/: alias_spec.rs  alias_spec_item.rs  call.rs  core.rs  expr.rs  func.rs  mod.rs  value.rs
src/substitution/: alias_substitution_visitor.rs  format_string.rs  mod.rs  stream_visitor.rs  substitute_idents.rs  test.rs
src/util/: combined.rs  cross_product.rs  deprecation.rs  log.rs  mod.rs  terminated.rs  token_distance.rs  token_stream.rs
tests/: build.rs  tests.rs
tests/compile/: alias_reuse.rs  bare_arg.rs  compose.rs  const_var_compose.rs  dup_alias.rs  dup_alias.stderr  error_reporting.rs  error_reporting.stderr  format_doc_attr.rs  format_lit_str.rs  func_enum_variant.rs  func_wrong_arg_num.rs  func_wrong_arg_num.stderr  generic_param_compose.rs  invalid_alias.rs  invalid_alias.stderr  multi_compose.rs  nested_compose.rs  nested_type_token_compose.rs  num_compose.rs  simple_compose.rs  trailing_comma.rs  trailing_semicolon.rs  undefined_func.rs  undefined_func.stderr
tests/compile/brackets/: bracket_syntax.rs  bracket_syntax_mixed.rs  bracket_syntax_warning.rs  bracket_syntax_warning.stderr
tests/compile/compose_item/: basic.rs  trailing_comma_after_aliases.rs  trailing_comma_after_loops.rs  trailing_comma_after_loops.stderr
tests/compile/concat_idents/: basic.rs  warning.rs  warning.stderr
tests/compile/funcs/: camel_case.rs  concat.rs  different_arg_types.rs  func_wrong_arg_num.rs  func_wrong_arg_num.stderr  hash.rs  lower.rs  nested.rs  normalize.rs  pascal_case.rs  snake_case.rs  undefined_func.rs  undefined_func.stderr  upper.rs
tests/compile/loops/: alias_reuse.rs  deep_tuples.rs  different_values.rs  direct_alias_use.rs  full.rs  invalid_alias.rs  invalid_alias.stderr  mixed.rs  nested.rs  nested_mixed.rs  nested_tuples.rs  simple.rs  tuple.rs  tuple_destructure_error.rs  tuple_destructure_error.stderr  tuple_mixed.rs  (+1 more)
(+30 files in other folders)
