[package]
name = "compose-idents"
version = "0.1.1"
authors = ["Andrei Pashkin <andrew.pashkin@gmx.co.uk>"]
description = "A Rust macro for generating new identifiers (names of variables, functions, traits, etc) by concatenating one or more arbitrary parts and applying other manipulations."
keywords = ["ident", "identifier", "name", "concatenate", "generate"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndreiPashkin/compose-idents"
documentation = "https://docs.rs/compose-idents"
exclude = [
    ".github/*",
    ".pre-commit-config.yaml",
    "Taskfile.yml",
    "README.md.tpl",
    ".gitignore",
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
proc-macro2 = "1.0.95"

[dev-dependencies]
trybuild = "1"
rstest = "~0.24.0"
tempfile = "3.19"

[[test]]
name = "format_doc_attr"
path = "tests/compile/format_doc_attr.rs"
harness = false

[[test]]
name = "build"
path = "tests/build.rs"
harness = false
