[package]
name = "compose-idents"
version = "0.2.2"
authors = ["Andrei Pashkin <andrew.pashkin@gmx.co.uk>"]
description = "A Rust macro for generating new identifiers (names of variables, functions, traits, etc) by concatenating one or more arbitrary parts and applying other manipulations."
keywords = ["ident", "identifier", "name", "concatenate", "generate"]
edition = "2018"
rust-version = "1.80.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/AndreiPashkin/compose-idents"
documentation = "https://docs.rs/compose-idents"
exclude = [
    ".github/*",
    ".pre-commit-config.yaml",
    "Taskfile.yml",
    "*.tpl",
    "snippets/*.tpl",
    "snippets/*.rs",
    ".gitignore",
    "AGENTS.md",
]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0.95"
thiserror = "2.0"
heck = "0.5"

[dev-dependencies]
trybuild = "1"
rstest = "~0.24.0"
tempfile = "3.19"

[features]
# Features are disabled by default so that special tests are opt-in only.
# Run them with `cargo test --features special-tests`.
default = []
_debug = []
_build-test = []
_format-doc-attr-test = []

[[test]]
name = "build"
path = "tests/build.rs"
harness = false
required-features = ["_build-test"]

[lints.clippy]
enum_variant_names = "allow"
